# vk-watchdog

./: CMakeLists.txt  README.md  main.cpp
templates/: ws.html
